Extends zebra badge width for bleeding edge fix attempt.

--- a/src/badge_templates/rdc23/styles/zebra-card.less
+++ b/src/badge_templates/rdc23/styles/zebra-card.less
@@ -19,7 +19,7 @@
 .zebra-card {
 	font-family: "Builder Sans Regular";
 
-	width: 89mm;
+	width: 90mm;
 	height: 142.2mm;
 	img { height: 100%; }
 
